# MinerU-Ecosystem

./: .gitignore  .gitlab-ci.yml  Dockerfile.ci  FLASH_EXTRACT_DESIGN.md  LICENSE  README.md  README.zh-CN.md  TECHNICAL_SPEC.md  TODOs.md  api.go  client.go  client_test.go  errors.go  flash.go  flash_api.go  flash_test.go  glama.json  go.mod  integration_test.go  main.go  models.go  options.go  package.json  pyproject.toml
cli/: .gitignore  Dockerfile.ci  README.md  README.zh-CN.md  TECHNICAL_SPEC.md  go.mod  go.sum  integration_test.go
cli/cmd/: auth.go  client.go  crawl.go  extract.go  flash_extract.go  root.go  update.go  verbose.go
cli/internal/exitcode/: exitcode.go
cli/mineru-open-api/: Dockerfile.ci  README.md  README.zh-CN.md  console_windows.go  go.mod  go.sum  integration_test.go  main.go
cli/mineru-open-api/cmd/: auth.go  client.go  crawl.go  extract.go  flash_extract.go  set_source.go  status.go  update.go  verbose.go
cli/mineru-open-api/install/: install.ps1
cli/mineru-open-api/npm/mineru-open-api/: package.json
cli/mineru-open-api/npm/mineru-open-api-darwin-arm64/: package.json
cli/mineru-open-api/npm/mineru-open-api-darwin-x64/: package.json
cli/mineru-open-api/npm/mineru-open-api-linux-arm64/: package.json
cli/mineru-open-api/npm/mineru-open-api-linux-x64/: package.json
cli/mineru-open-api/npm/mineru-open-api-win32-arm64/: package.json
cli/mineru-open-api/npm/mineru-open-api-win32-x64/: package.json
cli/mineru-open-api/pypi/: pyproject.toml
cli/mineru-open-api/pypi/src/mineru_open_api/: _cli.py
cmd/: auth.go  batch.go  client.go  crawl.go  extract.go  flash_extract.go  root.go  set_source.go  status.go  update.go  verbose.go  version.go
install/: install.ps1  install.sh
internal/config/: config.go
internal/exitcode/: exitcode.go
internal/output/: color.go  spinner.go
langchain-mineru/: README.md  README_zh-CN.md  TODO.md  pyproject.toml
langchain-mineru/langchain_mineru/document_loaders/: mineru.py
langchain-mineru/langchain_mineru/utils/: pdf.py
langchain-mineru/tests/: test_mineru_loader.py
langchain-mineru/tests/unit_tests/: test_mineru_loader.py  test_pdf_utils.py
langchain_mineru/: README.md  README_zh-CN.md  pyproject.toml
langchain_mineru/langchain_mineru/: __init__.py
langchain_mineru/langchain_mineru/document_loaders/: __init__.py  mineru.py
langchain_mineru/tests/integration_tests/: test_mineru_loader.py
langchain_mineru/tests/unit_tests/: test_mineru_loader.py
llama-index-readers-mineru/: README.md  pyproject.toml
llama-index-readers-mineru/llama_index/readers/mineru/: base.py
llama-index-readers-mineru/tests/: test_readers_mineru.py
mcp/: .gitignore  Makefile  README.md  README.zh-CN.md  pyproject.toml  server.json  setup.py
mcp/mcpb/: manifest.json  pyproject.toml
mcp/scripts/: build_mcpb.py  bump_version.py
mcp/src/mineru_open_mcp/: __init__.py  banner.py  cli.py  config.py  language.py  server.py
mcp/src/mineru_open_mcp/tools/: __init__.py  converters.py  extract.py  handlers.py  tools.py
sdk/go/: FLASH_EXTRACT_DESIGN.md  README.md  README.zh-CN.md  api.go  client.go  client_test.go  errors.go  flash.go  flash_api.go  flash_test.go  models.go  options.go  zip.go
sdk/python/: README.md  README.zh-CN.md  pyproject.toml
sdk/python/src/mineru/: __init__.py  _api.py  _constants.py  _flash_api.py  _zip.py  client.py  exceptions.py
sdk/python/tests/: _poll_debug.py  conftest.py  test_async.py  test_batch.py  test_crawl.py  test_extract.py  test_flash.py  test_large_file_upload.py
sdk/typescript/: .gitignore  README.md  README.zh-CN.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdk/typescript/src/: api.ts  client.ts  constants.ts  flash-api.ts  index.ts  models.ts  zip.ts
sdk/typescript/tests/: async.test.ts  cjs-smoke.test.ts  extract.test.ts  flash.test.ts  setup.ts
skills/: CONTRIBUTING.md  SKILL.md  _meta.json
src/: api.ts  client.ts  errors.ts  flash-api.ts  index.ts  models.ts
src/mineru/: __init__.py  _api.py  _flash_api.py  client.py  exceptions.py  models.py
tests/: batch.test.ts  conftest.py  crawl.test.ts  flash.test.ts  setup.ts  test_async.py  test_batch.py  test_extract.py  test_flash.py
tools/invoice_extractor/: invoice_extractor_v1.py
