[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mineru-open-sdk"
version = "0.1.0"
description = "MinerU API Python SDK — one line to turn documents into Markdown"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "yangqi" }]
keywords = ["mineru", "pdf", "markdown", "ocr", "document-parsing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/yangqi/mineru-open-sdk"
Repository = "https://github.com/yangqi/mineru-open-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/mineru"]

[tool.pytest.ini_options]
testpaths = ["tests"]
