[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mineru-open-sdk"
version = "0.1.1"
description = "MinerU API Python SDK — one line to turn documents into Markdown"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "yangqi" }]
keywords = ["mineru", "pdf", "markdown", "ocr", "document-parsing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.urls]
Homepage = "https://github.com/opendatalab/MinerU-Ecosystem/sdk/python"
Repository = "https://github.com/opendatalab/MinerU-Ecosystem/sdk/python"

[tool.hatch.build.targets.wheel]
packages = ["src/mineru"]

[tool.pytest.ini_options]
testpaths = ["tests"]
