[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mineru-open-api"
version = "0.0.0"
description = "MinerU Open API CLI — one command to turn documents into Markdown"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [{ name = "yangqi" }]
keywords = ["mineru", "pdf", "markdown", "ocr", "document-parsing", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/opendatalab/MinerU-Ecosystem"
Repository = "https://github.com/opendatalab/MinerU-Ecosystem"

[project.scripts]
mineru-open-api = "mineru_open_api._cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mineru_open_api"]
